--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <!-- Player Musik Tersembunyi -->
+    <div class="music-control">
+        <audio id="weddingMusic" loop>
+            <!-- Ganti dengan link musik Anda -->
+            <source src="Music.mp3" type="audio/mpeg">
+            Browser tidak mendukung audio.
+        </audio>
+        <button id="musicToggle" aria-label="Toggle Musik">
+            <i class="fas fa-music"></i>
+        </button>
+    </div>
     <!-- Dekorasi Bunga -->
     <div class="floral-decor decor-1"></div>
     <div class="floral-decor decor-2"></div>
@@ -31,13 +42,13 @@
            <!-- Section Nama Pasangan tanpa Foto -->
             <section class="couple-names-section">
                 <div class="name-card">
-                    <h3>Muhammad Fahmi Idris</h3>
-                    <p>Putra Dari Alm. KH. M. Yusuf dan Alm. Nyai HJ. Siti Zulaikhah</p>
+                    <h3>Farina Noer Ilal 'Afiyah</h3>
+                    <p>Putri Dari Bapak Sohari Dan Ibu Siti Hamina</p>
                 </div>
                 <div class="amp">&</div>
                 <div class="name-card">
-                    <h3>Farina Noer Ilal 'Afiyah</h3>
-                    <p>Putri Dari Bapak Sohari Dan Ibu Siti Hamina</p>
+                    <h3>Muhammad Fahmi Idris</h3>
+                    <p>Putra Dari Alm. KH. M. Yusuf dan Alm. Nyai HJ. Siti Zulaikhah</p>
                 </div>
             </section>
             <section class="details-section">
@@ -52,7 +63,7 @@
                 <div class="detail-card">
                     <h3>Resepsi</h3>
                     <p>Selasa, 10 Juni 2025</p>
-                    <p>13.00 - 16.00 WIB</p>
+                    <p>13.00 - 17.00 WIB</p>
                     <p>Kediaman Ibu Siti Hamina</p>
                     <p>Jl. Randulima 01, Pertigaan selatan</p>
                 </div>
