--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Audio Element (Hidden) -->
     <audio id="bgMusic" loop autoplay>
-        <source src="music.mp3" type="audio/mpeg">
+        <source src="Music.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung elemen audio.
     </audio>
 
